change titlebar title

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <body>
     <div class="titlebar">
-        <h2 class="title">Mobile Location Data Bias Mapper</h2>
+        <h2 class="title">Mobility Data Bias Mapper</h2>
     </div>
     <button id="toggleButton" class="sidebarButton"><img src="./img/toggle-button.png" class="icon">Info Panel</button> 
     <div class="dashboard">
