update sidebar text

--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
         </script>
 
         <aside class="sidebar">
-            <p><em>Pardon our dust: This dashboard is under construction.</em></p>
+            <p><em>Pardon our dust. This dashboard is under construction.</em></p>
             <div style="display: flex; align-items: center;"><img src="./img/crystal.png" style="height: 2rem; padding-right: 0.2rem;"><p><b>Geospatial Ethics in Motion (GEM)</b></p></div>
             <p style="margin-top: 0;">The <em>GEM</em> project investigates how data and algorithmic biases shape our understanding of human mobility, aiming to inform decision-making that better reflects the lived experiences of diverse communities.</p>
             <p>This dashboard explores how sampling bias in mobile location data varies across space and sociodemographic dimensions.</p>
             <p style="padding-top: 1rem;"><b>Dashboard Tutorial</b> (2 min.)</p>
-            <p><em>Coming soon.</em>></p>
+            <p><em>Coming soon.</em></p>
             <p style="padding-top: 1rem; margin-bottom: 0;"><b>Links</b></p>
             <div class="sidebar-link"><a href="https://github.com/jlembury/gem-bias-mapper" target="_blank" title="Go to GitHub"><img src="./img/github.png" class="icon"></a><a href="https://github.com/jlembury/gem-bias-mapper" target="_blank" title="Go to Github"><p>Visit GEM on Github</p></a></div>
             <div class="sidebar-link" style="padding-bottom: 2rem;"><a href="https://forms.gle/1xGBKSTXUAjZo3Sm9" target="_blank" title="Contact form"><img src="./img/comment.png" class="icon"></a><a href="https://forms.gle/1xGBKSTXUAjZo3Sm9" target="_blank" title="Contact form"><p>Contact the GEM Team</p></a></div>
