update sidebar text

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <p style="padding-top: 1rem;"><b>Dashboard Tutorial</b> (2 min.)</p>
             <p><em>Coming soon.</em></p>
             <p style="padding-top: 1rem; margin-bottom: 0;"><b>Links</b></p>
-            <div class="sidebar-link"><a href="https://github.com/jlembury/gem-bias-mapper" target="_blank" title="Go to GitHub"><img src="./img/github.png" class="icon"></a><a href="https://github.com/jlembury/gem-bias-mapper" target="_blank" title="Go to Github"><p>Visit GEM on Github</p></a></div>
+            <div class="sidebar-link"><a href="https://github.com/jlembury/gem-bias-mapper" target="_blank" title="Go to GitHub"><img src="./img/github.png" class="icon"></a><a href="https://github.com/jlembury/gem-bias-mapper" target="_blank" title="Go to Github"><p>Github Repository</p></a></div>
             <div class="sidebar-link" style="padding-bottom: 2rem;"><a href="https://forms.gle/1xGBKSTXUAjZo3Sm9" target="_blank" title="Contact form"><img src="./img/comment.png" class="icon"></a><a href="https://forms.gle/1xGBKSTXUAjZo3Sm9" target="_blank" title="Contact form"><p>Contact the GEM Team</p></a></div>
             <p style="position:absolute; bottom: 0; justify-self: center;">&copy;2025 Jessica Embury</p>
         </aside>
